; ModuleID = '/home/carl/AnghaBench/FFmpeg/libavutil/extr_cpu.c_av_cpu_count.c'
source_filename = "/home/carl/AnghaBench/FFmpeg/libavutil/extr_cpu.c_av_cpu_count.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@av_cpu_count.printed = internal global i32 0, align 4
@AV_LOG_DEBUG = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [27 x i8] c"detected %d logical cores\0A\00", align 1
@CTL_HW = common dso_local global i32 0, align 4
@HW_NCPU = common dso_local global i32 0, align 4
@_SC_NPROCESSORS_ONLN = common dso_local global i32 0, align 4
@_SC_NPROC_ONLN = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @av_cpu_count() #0 {
  %1 = alloca i32, align 4
  store i32 1, i32* %1, align 4
  %2 = load volatile i32, i32* @av_cpu_count.printed, align 4
  %3 = icmp ne i32 %2, 0
  br i1 %3, label %8, label %4

4:                                                ; preds = %0
  %5 = load i32, i32* @AV_LOG_DEBUG, align 4
  %6 = load i32, i32* %1, align 4
  %7 = call i32 @av_log(i32* null, i32 %5, i8* getelementptr inbounds ([27 x i8], [27 x i8]* @.str, i64 0, i64 0), i32 %6)
  store volatile i32 1, i32* @av_cpu_count.printed, align 4
  br label %8

8:                                                ; preds = %4, %0
  %9 = load i32, i32* %1, align 4
  ret i32 %9
}

declare dso_local i32 @av_log(i32*, i32, i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
